# memcached

./: .gitignore  Cargo.toml  Makefile  readme.md
.github/workflows/: rust.yml
src/: client.rs  connection.rs  error.rs  lib.rs  parse.rs
src/client/: check.rs  client_hash.rs  connectable.rs  mod.rs  value.rs
src/client/values/: from_value.rs  mod.rs  to_value.rs
src/protocol/: binary_packet.rs  code.rs  mod.rs  parse.rs
src/protocol/binary/: binary_packet.rs  mod.rs
src/stream/: mod.rs
tests/: benchmark.rs  doc.rs
