[package]
name = "memcached"
version = "0.4.3"
authors = ["liangyongrui <leungyongrui@gmail.com>"]
edition = "2018"
description = "async memcached rust client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/liangyongrui/memcached"
readme = "readme.md"
keywords = ['memcached']
categories = ['memcached']

[dependencies]
byteorder = "1"
url = "2"
async-std = { version = "1", features = ["attributes"] }
mobc = { version = "0.5", features = ["async-std"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
